[metadata]
name = jug
version = 0.0.1
description = Juggler Monitoring
license = MIT License
author = aki
author_email = aki666@gmail.com
classifiers =
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
  seaborn
  scipy
  scikit-learn
  tqdm
  redis
  opencv-python

[options.extras_require]
dev =
  pytest
  flake8
  mypy

[options.entry_points]
console_scripts =
  kabaneri = kab.main:mumei

